Fix images on mobile Safari

--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -48,7 +48,7 @@ body {
 
     /* Ensure images and GIFs in Safari are not pixelated */
     img {
-        image-rendering: auto !important;
+        image-rendering: crisp-edges !important;
     }
 
     // --callout-title-size: 1.2em;
